tests/suite/fail/generated/borrow/fail_move_use_msg.ny
fn use(x: string) -> void { print(x) }
fn main() {
    let msg = "hello"
    use(msg)
    print(msg) //~ ERROR was moved
}
